--- a/porfolio_react/src/App.css
+++ b/porfolio_react/src/App.css
@@ -42,8 +42,8 @@
   width: 80%;
   text-align: center;
 }
-#github, #linkedin {
-  height: 30px;
+#github, #linkedin, #deployment {
+  height: 25px;
 }
 #face {
   height: 110px
@@ -52,9 +52,29 @@ img {
   padding: 2px;
 }
 .card-body {
+  position: relative;
   background-color: #4a4e69;
+  
+  
 }
 .card-header {
   background-color: #9b9b7a;
 }
+.coverDiv {
+  color: #dfdfdf;
+  position: absolute;
+  
+}
+.card-body .coverDiv {
+  opacity: 0;
+  position: absolute;
+  z-index: 99;
+}
+.card-body:hover .coverDiv {
+  opacity: 100;
+   
+}
 
+.card-body:hover .imgHov {
+  opacity: 0;
+}
